force-app/main/default/objects/Batch_Run_Log__c/Batch_Run_Log__c.object-meta.xml
<CustomObject>
    <description>Audit log written by batch job finish() methods. One record per batch run.</description>
    <label>Batch Run Log</label>
    <nameField>
        <displayFormat>BRL-{0000000}</displayFormat>
        <label>Batch Run Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Run Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>