force-app/main/default/objects/Batch_Run_Log__c/fields/Apex_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Apex_Job_Id__c</fullName>
    <label>Apex Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>