force-app/main/default/objects/Batch_Run_Log__c/fields/Batch_Type__c.field-meta.xml
<CustomField>
    <fullName>Batch_Type__c</fullName>
    <label>Batch Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>RCC_Card_Import</fullName><default>false</default><label>RCC Card Import</label></value>
            <value><fullName>Points_Expiry</fullName><default>false</default><label>Points Expiry</label></value>
            <value><fullName>Tier_Recalculation</fullName><default>false</default><label>Tier Recalculation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>