force-app/main/default/objects/Batch_Run_Log__c/fields/Error_Summary__c.field-meta.xml
<CustomField>
    <fullName>Error_Summary__c</fullName>
    <label>Error Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>