force-app/main/default/objects/Batch_Run_Log__c/fields/Total_Succeeded__c.field-meta.xml
<CustomField>
    <fullName>Total_Succeeded__c</fullName>
    <label>Total Succeeded</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>